--- a/chat.html
+++ b/chat.html
@@ -23,6 +23,10 @@
                 initPayload: '/init',
                 customData: { language: "en" },
                 socketUrl: "http://localhost:5005",
+                title: "DocAI Bot",
+                subtitle: "Let me assist you!",
+                docViewer : false,
+                showMessageDate: true,
 
               },
               null
