Added Email Feature

--- a/chat.html
+++ b/chat.html
@@ -26,7 +26,7 @@
                 title: "DocAI Bot",
                 subtitle: "Let me assist you!",
                 docViewer : false,
-                showMessageDate: true,
+                // showMessageDate: true,
 
               },
               null
